# gicker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: IDEA.md
include/: gicker-cli.h
src/: gicker-cli.cpp
